--- a/src/Backend.Presentation.API/appsettings.Development.json
+++ b/src/Backend.Presentation.API/appsettings.Development.json
@@ -6,10 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=RENT_DEV;Username=myuser;Password=mysecretpassword;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=RENT_DEV;Username=postgres;Password=mysecretpassword;"
   },
   "RabbitMQ": {
-    "HostName": "rabbitmq",
+    "HostName": "localhost",
     "UserName": "guest",
     "Password": "guest"
   },
