--- a/src/Backend.Domain/Backend.Domain.csproj
+++ b/src/Backend.Domain/Backend.Domain.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Backend.Shared\Backend.Shared.csproj" />
+    <ProjectReference Include="..\Backend.Shared\Backend.Shared.csproj" />
   </ItemGroup>
 
 </Project>
