--- a/src/Backend.Infrastructure.Mongo/Backend.Infrastructure.Mongo.csproj
+++ b/src/Backend.Infrastructure.Mongo/Backend.Infrastructure.Mongo.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\ValueObject\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Backend.Shared\Backend.Shared.csproj" />
+    <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
   </ItemGroup>
 
 </Project>
